Adjust insertion point when listifying unordered list items

During the process of listifying a selection of unordered lists items
the insertion point of the first element is incorretcly selected. The
issue appears when the selection start at an intermediate list item and
ending in a different list item.

Since the process is defined to act on single paragraphs, the firts item
splits the list first and then it removes the intermediate item. This
logic, implemented in 'unlistifyParagraph', causes that 2 independent
lists are created with a <span> element in the middle.

Then, an algorithm implemented in 'listifyParagraph' looks for an
insertion point for the new ordered list item. Since there is a previous
sibling which represents a 'visually distinct position', the <span>
temporary created during the 'unlistifyParagraph' logic is selected.

The incorrectly selected insertion point leads to the subsequent
doApplyForSingleParagraph executions to consider the rest of the list
items in the selection to be part of a different ordered list.

BUG=702792

Review-Url: https://codereview.chromium.org/2757563004
Cr-Commit-Position: refs/heads/master@{#459442}

Former-commit-id: ce9fb22d90743b6b08b1a1baa00202d781673269